--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,11 +1,22 @@
 <!DOCTYPE html>
-<html class="t-{{ site.themeColor }}">
-  {% include head.html %}
-  <body>
-    {% include navigation.html %}
+<html lang="en">
 
-    {{ content }}
+{% include head.html %}
 
-    {% include footer.html %}
-  </body>
+<body>
+  <div class="row">
+    <div class="col s12 m3">
+      <div class="table cover">
+        {% include sidebar.html %}
+      </div>
+    </div>
+    <div class="col s12 m9">
+      <div class="post-listing">
+        {{ content }}
+        {% include footer.html %}
+      </div>
+    </div>
+  </div>
+  {% include js.html %}
+</body>
 </html>
