--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -1,14 +1,21 @@
 ---
 layout: default
 ---
-<article class="c-article">
-  <header class="c-header c-article__header">
-    <div class="u-container">
-      <h1 class="c-header__title">{{ page.title }}</h1>
-    </div>
-  </header>
 
-  <div class="c-article__main">
-    {{ content }}
-  </div>
-</article>
+  <div id="page">
+    <header class="page-header">
+      <h2>{{ page.title }}</h2>
+    </header>
+
+    <article class="page-content">
+      {{ content }}
+    </article>
+
+
+  </div><!-- end page content -->
+
+
+  {% if site.owner.disqus-shortname and page.comments == true %}
+  <div id="disqus_thread"></div>
+  {% include disqus.html %}
+  {% endif %}
