--- a/_sass/components/_buttons.scss
+++ b/_sass/components/_buttons.scss
@@ -1,19 +1,92 @@
-/* ==========================================================================
-   Buttons
+/* Buttons
    ========================================================================== */
 
-// Base button
-.c-btn {
-  padding: 1.5rem 2rem;
-  @include fs--meta;
-  text-decoration: none;
-  background: #FAFAFA;
-  box-shadow: 0 2px 2px 0 rgba(0,0,0,.14),0 3px 1px -2px rgba(0,0,0,.2),0 1px 5px 0 rgba(0,0,0,.12);
-  border-radius: 3px;
+// General
+.btn {
+  display: inline-block;
+  margin-bottom: 20px;
+  padding: 8px 20px;
+  font-size: 0.875em;
+  font-family: $font-family-base;
+  font-weight: 700;
+  background-color: $primary;
+  color: $white;
+  border-width: 2px !important;
+  border-style: solid !important;
+  border-color: $primary;
+  text-decoration: none !important;
+  border-radius: 5px;
+  &:visited {
+    color: $white;
+    border-color: $primary;
+  }
+  &:hover {
+    background-color: $white;
+    color: $primary;
+    border-color: $primary;
+  }
 }
 
-// Button groups
-.c-btn-group {
-  display: flex;
-  justify-content: space-between;
+// Success button
+.btn-success {
+  background-color: $success;
+  color: $white;
+  border-color: $success;
+  &:visited {
+    color: $white;
+    border-color: $success;
+  }
+  &:hover {
+    background-color: $white;
+    color: $success;
+    border-color: $success;
+  }
+}
+
+// Warning button
+.btn-warning {
+  background-color: $warning;
+  color: $white;
+  border-color: $warning;
+  &:visited {
+    color: $white;
+    border-color: $warning;
+  }
+  &:hover {
+    background-color: $white;
+    color: $warning;
+    border-color: $warning;
+  }
+}
+
+// Danger button
+.btn-danger {
+  background-color: $danger;
+  color: $white;
+  border-color: $danger;
+  &:visited {
+    color: $white;
+    border-color: $danger;
+  }
+  &:hover {
+    background-color: $white;
+    color: $danger;
+    border-color: $danger;
+  }
+}
+
+// Information button
+.btn-info {
+  background-color: $info;
+  color: $white;
+  border-color: $info;
+  &:visited {
+    border-color: $info;
+    color: $white;
+  }
+  &:hover {
+    background-color: $white;
+    color: $info;
+    border-color: $info;
+  }
 }
